track fulfillment status of shop.

--- a/config/app_secret_config.yml.example
+++ b/config/app_secret_config.yml.example
@@ -8,10 +8,12 @@ defaults: &defaults
     scope: 'read_orders'
     callback_path: '/callback'
   domain:
-    host: 'express.shopqiapp.com' # 邮件发送配置
+    host: 'express.lvh.me:3000' # 邮件发送配置
     record: 粤ICP备11089804号
   shopqi_domain:
     protocol: 'http://'
+  express:
+    key: 774DDF3N23K56H6M361C63K3M259A9B2
 
 development:
   <<: *defaults
