--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: ruby
 rvm: 1.9.3
 
 script:
-  - cp config/database.yml.example.postgresql config/database.yml 2>&1
+  - cp config/database.yml.example config/database.yml 2>&1
   - cp config/app_secret_config.yml.example config/app_secret_config.yml 2>&1
   - bundle exec rake db:drop db:create db:schema:load --trace 2>&1
   - bundle exec rspec spec
