--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -18,7 +18,7 @@ development:
   host: localhost
   database: shopqi-app-express_development
   pool: 5
-  username: shopqi-app-express
+  username: postgres
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -45,7 +45,7 @@ test:
   host: localhost
   database: shopqi-app-express_test
   pool: 5
-  username: shopqi-app-express
+  username: postgres
   password:
 
 production:
@@ -54,5 +54,5 @@ production:
   host: localhost
   database: shopqi-app-express_production
   pool: 5
-  username: shopqi-app-express
+  username: postgres
   password:
